force-app/main/default/objects/Court_Information__c/Court_Information__c.object-meta.xml
<CustomObject>
    <description>** This object is no longer is use **

The information in this section pertains to the criminal charges relating to the subject(s) in this case</description>
    <label>Court Information - OLD - DO NOT USE</label>
    <nameField>
        <label>Charge Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Court Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>