force-app/main/default/objects/Court_Information__c/fields/Charge_Category__c.field-meta.xml
<CustomField>
    <fullName>Charge_Category__c</fullName>
    <label>Charge Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Felony</fullName>
            </value>
            <value>
                <fullName>Infraction</fullName>
            </value>
            <value>
                <fullName>Misdemeanor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>