force-app/main/default/objects/Court_Information__c/fields/Charge_Count__c.field-meta.xml
<CustomField>
    <fullName>Charge_Count__c</fullName>
    <description>This is the number of times subject was charged</description>
    <inlineHelpText>Enter the number of counts this subject was charged for violating the law enteried in the Charge Title</inlineHelpText>
    <label>Charge Count</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>