force-app/main/default/objects/Court_Information__c/fields/Court_Date__c.field-meta.xml
<CustomField>
    <fullName>Court_Date__c</fullName>
    <inlineHelpText>Please enter the court/hearing date and time</inlineHelpText>
    <label>Court Date</label>
    <type>Date</type>
</CustomField>