force-app/main/default/objects/Court_Information__c/fields/Court_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Court_Disposition__c</fullName>
    <description>final outcome of court procedings for this charge</description>
    <inlineHelpText>Please enter the final judgemenbt for this charge.</inlineHelpText>
    <label>Court Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquitted</fullName>
            </value>
            <value>
                <fullName>Adjournment in Contemplation of Dismissal</fullName>
            </value>
            <value>
                <fullName>Convicted – pled guilty</fullName>
            </value>
            <value>
                <fullName>Convicted – trial</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Nolle prosequi</fullName>
            </value>
            <value>
                <fullName>Abated</fullName>
            </value>
            <value>
                <fullName>Grand Jury - Indicted</fullName>
            </value>
            <value>
                <fullName>Grand Jury - No Bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>