force-app/main/default/objects/Court_Information__c/fields/Court_Type__c.field-meta.xml
<CustomField>
    <fullName>Court_Type__c</fullName>
    <label>Court Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Criminal</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>