force-app/main/default/objects/Court_Information__c/fields/Defendant__c.field-meta.xml
<CustomField>
    <fullName>Defendant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Person charged with violation of a federal, state or local crime.</description>
    <inlineHelpText>This is referred to as &quot;Subject&quot; in contacts</inlineHelpText>
    <label>Defendant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Court Information</relationshipLabel>
    <relationshipName>Court_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>