force-app/main/default/objects/Court_Information__c/fields/Forfeiture_Date__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Date__c</fullName>
    <description>effective date of forfeiture</description>
    <inlineHelpText>Enter the date the forfeiture takes effect</inlineHelpText>
    <label>Forfeiture Date</label>
    <type>Date</type>
</CustomField>