force-app/main/default/objects/Court_Information__c/fields/Petition_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Petition_Hearing__c</fullName>
    <label>Petition Hearing Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Court orders animals be held</fullName>
            </value>
            <value>
                <fullName>Court orders bond</fullName>
            </value>
            <value>
                <fullName>Order forfeiting animals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>