force-app/main/default/objects/Court_Information__c/fields/Petition_Hearing_Details__c.field-meta.xml
<CustomField>
    <fullName>Petition_Hearing_Details__c</fullName>
    <description>details of hearing</description>
    <inlineHelpText>Please enter the details of the Petition Hearing including any special orders by the court.</inlineHelpText>
    <label>Petition Hearing Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>