force-app/main/default/objects/Court_Information__c/fields/Sentence__c.field-meta.xml
<CustomField>
    <fullName>Sentence__c</fullName>
    <label>Sentence</label>
    <type>TextArea</type>
</CustomField>